# include_data

./: .gitignore  Cargo.toml  LICENSE  LICENSE.MIT  README.md
.github/workflows/: audit.yml  test.yml
src/: lib.rs  un_safe.rs
tests/: include_data.rs  include_floats.rs  include_ints.rs  include_slice.rs  include_unsafe.rs
tests/bad/include_data/: missing_file.rs  missing_file.stderr  not_anybitpattern.rs  not_anybitpattern.stderr  not_pod.rs  not_pod.stderr  wrong_size.rs  wrong_size.stderr
tests/bad/include_floats/: f32_data12.rs  f32_data12.stderr  f32_f64.rs  f32_f64.stderr  int.rs  int.stderr  missing_file.rs  missing_file.stderr
tests/bad/include_ints/: bool.rs  bool.stderr  const.rs  const.stderr  float.rs  float.stderr  missing_file.rs  missing_file.stderr  u16_data31.rs  u16_data31.stderr  u16_data32.stderr  u8_u16.rs  u8_u16.stderr
tests/bad/include_slice/: bool.rs  bool.stderr  const.rs  const.stderr  f32_data12.rs  f32_data12.stderr  f32_f64.rs  f32_f64.stderr  missing_file.rs  missing_file.stderr  not_anybitpattern.rs  not_anybitpattern.stderr  u16_data31.rs  u16_data31.stderr  u8_u16.rs  u8_u16.stderr
tests/bad/include_unsafe/: missing_file.rs  missing_file.stderr  safe.rs  safe.stderr  wrong_size.rs  wrong_size.stderr
tests/test_data/: file_exactly_4_bytes_long  generate.bash  generate.sh  lorem_ipsum_utf32  some_utf-32_file
