[package]
name = "include_data"
description = "Include typed data directly in your executable"
authors = ["jmaargh <https://github.com/jmaargh>"]
version = "1.0.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/jmaargh/include_data"
repository = "https://github.com/jmaargh/include_data"
readme = "README.md"
keywords = ["bytes", "data", "include", "casting", "static"]
categories = ["encoding", "no-std", "no-std::no-alloc", "embedded"]
exclude = [".gitignore", ".github", "tests/test_data/generate.bash"]

[dependencies.bytemuck]
version = "1"
features = ["min_const_generics", "wasm_simd", "aarch64_simd"]

[dev-dependencies]
trybuild = "1"
